[tool.poetry]
name = "astalavito"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "astalavito"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium-chrome = "^0.0.29"
pytest = "^7.2.2"
sqlalchemy = "^2.0.5.post1"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
markupsafe = "2.0.1"
nicegui = "^1.1.10"
confluent-kafka = "^2.0.2"
click = "^8.1.3"
faust-streaming = {extras = ["rocksdb"], version = "^0.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
